objects/Demo_Request_Decline__c.object
<CustomObject>
    <description>What it does? Object holding information about declining a DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Alternate_Date_Time_Available__c</fullName>
        <description>What it does?  Holds alternate date/time for the declined DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Alternate Date(s)/Time(s) Available</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Date_Time_Timezone__c</fullName>
        <defaultValue>&quot;America/New_York&quot;</defaultValue>
        <description>What it does?  Holds the timezone of an alternate date/time for a declined DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Alternate Date/Time Timezone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Comments__c</fullName>
        <description>What it does?  Holds comments about declining the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <description>What it does?  Holds the reason for declining the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Prep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Appointment</fullName>
                </value>
                <value>
                    <fullName>Product Knowledge</fullName>
                </value>
                <value>
                    <fullName>Scheduled Demo</fullName>
                </value>
                <value>
                    <fullName>Scheduled Meeting</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Request_ID__c</fullName>
        <description>What it does?  Holds the ID of the DR that was declined.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Demo Request ID</label>
        <referenceTo>Demo_Request__c</referenceTo>
        <relationshipLabel>Request Declines</relationshipLabel>
        <relationshipName>Demo_Request_Declines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Escalate_All_Declines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does?  Shows whether all request declines should be escalated.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Escalate - All Declines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalate_TSC_Declines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does?  Shows whether TSC declines should be escalated.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Escalate - TSC Declines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_User_Id__c</fullName>
        <description>What it does? Holds id of the reporting user associated with the DR decline. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <formula>User_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <description>What it Does?  Holds the time difference between when a request was submitted and declined.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <formula>(CreatedDate  -  Demo_Request_ID__r.CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Holds the name of the user that declined the DR. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>User Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>equals</operation>
                <valueField>User.UserRole.Name</valueField>
            </filterItems>
            <infoMessage>By default, your search is restricted to users within your same role.  To search all users, click &quot;Show all results.&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Request_Declines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demo Request Decline</label>
    <nameField>
        <displayFormat>DR-DL-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Demo Request Decline Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Request Declines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>